name:                yesod-rst
version:             0.2.3
synopsis:            Tools for using reStructuredText (RST) in a yesod application
description:         A subset of pandoc functionality useful for RST processing in yesod applications
homepage:            http://github.com/pSub/yesod-rst
license:             GPL
license-file:        LICENSE
author:              Pascal Wittmann
maintainer:          Pascal Wittmann <mail@pascal-wittmann.de>
category:            Web, Yesod
build-type:          Simple
cabal-version:       >=1.8
library
  exposed-modules: Yesod.RST

  build-depends: base               >= 4     && < 5
               , bytestring
               , text               >= 0.11
               , pandoc             >= 1.9
               , blaze-html         >= 0.5
               , blaze-markup       >= 0.8
               , xss-sanitize       >= 0.3.1
               , directory
               , yesod-core         >= 1.1.5
               , yesod-form         >= 1.2
               , hamlet             >= 1.1
               , shakespeare        >= 2.1
               , persistent         >= 0.9

  ghc-options: -Wall

  extensions: QuasiQuotes
              TypeFamilies
              OverloadedStrings
              FlexibleContexts
              FlexibleInstances
              MultiParamTypeClasses
              GeneralizedNewtypeDeriving

source-repository head
  type:         git
  location:     git://github.com/pSub/yesod-rst.git
